Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.7.10 (??/??/????):
	libpurple:
	* Stop sending audio when placing a call on hold. (Jakub Adam) (#13032)
	* Stop translating gpointers to ints in the dbus API.  This removes
	  functions from the dbus API.  (The openSUSE Project) (#12507)

	Pidgin:
	* Support using the Page Up and Page Down keys on the numeric keypad in
	  the conversation window.  (Ryan Flegel) (#13127)

	Plugins:
	* The Voice/Video Settings plugin no longer resets selected devices to
	  defaults. (Jakub Adam) (#13044)
	* The Autoaccept plugin now allows disabling filename escaping. (Rok
	  Mandeljc) (half of #11459)
	* The Autoaccept plugin now allows choosing Reject/Ask/Accept for
	  non-buddies. (Rok Mandeljc) (half of #11459)

	QQ:
	* QQ2008 is now the default protocol version. (Michael Terry) (#11635)

version 2.7.9 (12/26/2010):
	MSN:
	* Fix a crash when receiving short packets related to P2Pv2. (CVE ID
	  pending)

version 2.7.8 (12/19/2010):
	General:
	* Fix the exceptions in purple-remote on Python 2.6+. (Ari Pollak)
	  (#12151)

	Pidgin:
	* When a conversation has reached the maximum limit on the number
	  of smileys, display the text representation of the smiley properly
	  when it contains HTML-escapable characters (e.g. "<3" was previously
	  displayed as "&lt;3").
	* Drop dependency on GdkGC and use Cairo instead.
	* New UI hack to assist in first-time setup of Facebook accounts with
	  icon from Jakub Szypulka.
	* Don't hide the buddy list if there is no notification area in which
	  to put the icon. (#12129)

	libpurple:
	* Fix multipart parsing when '=' is included in the boundary for
	  purple_mime_document_parse. (Jakub Adam) (#11598)

	AIM and ICQ:
	* Buddies who unset their status message will now be correctly shown
	  without a message in your buddy list. (#12988)

	Gadu-Gadu:
	* Updated our bundled libgadu and minimum requirement for external
	  libgadu to 1.9.0. (#12789)

	MSN: